---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type tp: proc(_ : array 1..2 of char(*))\nvar a : array 1..2 of char\nvar b : array 1..2 of char(42)\nvar p : tp\n\n% element type is also coercible\np(a)\np(b)\n"
---
"tp"@"src/main.t:5..7" [Type]: alias[DefId(PackageId(3072), LocalDefId(0))] of procedure ( pass(value) array ( range of `int` (Unevaluated(PackageId(3072), BodyId(0)) .. Expr(Unevaluated(PackageId(3072), BodyId(1)), No)), ) of char_n Any, ) -> void
"_"@"src/main.t:14..15" [Param(Value, No)]: <error>
"a"@"src/main.t:45..46" [ConstVar(Var, No)]: array ( range of `int` (Unevaluated(PackageId(3072), BodyId(2)) .. Expr(Unevaluated(PackageId(3072), BodyId(3)), Yes)), ) of char
"b"@"src/main.t:72..73" [ConstVar(Var, No)]: array ( range of `int` (Unevaluated(PackageId(3072), BodyId(4)) .. Expr(Unevaluated(PackageId(3072), BodyId(5)), Yes)), ) of char_n Fixed(Unevaluated(PackageId(3072), BodyId(6)))
"p"@"src/main.t:103..104" [ConstVar(Var, No)]: alias[DefId(PackageId(3072), LocalDefId(0))] of procedure ( pass(value) array ( range of `int` (Unevaluated(PackageId(3072), BodyId(0)) .. Expr(Unevaluated(PackageId(3072), BodyId(1)), No)), ) of char_n Any, ) -> void
"<unnamed>"@"<unknown>:0..0" [Undeclared]: <error>
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
